src/objects/Net_Promoter_Score__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact_Title__c</fullName>
        <formula>IF(ISBLANK(Contact__r.Title),Account__r.Name &amp; &quot; (&quot; &amp; Contact__r.Full_Name__c &amp; &quot;)&quot;,
Account__r.Name &amp; &quot; (&quot; &amp; Contact__r.Full_Name__c &amp;&quot;, &quot; &amp; Contact__r.Title &amp; &quot;)&quot;)</formula>
        <label>Account (Contact, Title)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Net Promoter Scores</relationshipLabel>
        <relationshipName>Net_Promoter_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Net Promoter Scores</relationshipLabel>
        <relationshipName>Net_Promoter_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Surveyed__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Surveyed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>NPS Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <formula>VALUE(TEXT(score__c))</formula>
        <label>Score (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(VALUE(TEXT(score__c))&lt;=6,&quot;Detractor&quot;,IF(VALUE(TEXT(score__c))&gt;=9,&quot;Promoter&quot;,&quot;Passive&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_Category__c</fullName>
        <label>Why Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generally happy</fullName>
                </value>
                <value>
                    <fullName>Easy to use</fullName>
                </value>
                <value>
                    <fullName>Love control</fullName>
                </value>
                <value>
                    <fullName>Great visibility</fullName>
                </value>
                <value>
                    <fullName>Need better reports</fullName>
                </value>
                <value>
                    <fullName>Poor usability</fullName>
                </value>
                <value>
                    <fullName>Prefer competing product(s)</fullName>
                </value>
                <value>
                    <fullName>Value did not materialize</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Buggy</fullName>
                </value>
                <value>
                    <fullName>Generally unhappy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why__c</fullName>
        <inlineHelpText>Why did you give that score?</inlineHelpText>
        <label>Why?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_if_6_or_Lower__c</fullName>
        <formula>IF(VALUE(TEXT(score__c))&lt;=6,1,0)</formula>
        <label>1 if 6 or Lower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_if_9_or_10__c</fullName>
        <formula>IF(VALUE(TEXT(score__c))&gt;=9,1,0)</formula>
        <label>1 if 9 or 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>score__c</fullName>
        <inlineHelpText>On a scale of 0 to 10, how likely are you to recommend VMTurbo to a friend or colleague?</inlineHelpText>
        <label>Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Net Promoter Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NPS-{0000}</displayFormat>
        <label>NPS Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Net Promoter Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>